[package]
name = "egui_learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcode = "0.14.0"
eframe = "0.27.2"
egui_extras = { version="0.27.2", features = ["all_loaders"] }
image = { version = "0.25.1", features = ["jpeg", "png"] }
env_logger = "0.11.3"
integer-sqrt = "0.1.5"