[package]
name = "qrcode_util"
version = "0.1.0"
edition = "2021"

[dependencies]
qrcode = "0.14.1"
rqrr = "0.9.0"
eframe = "0.31.0"
egui_extras = { version="0.31.0", features = ["all_loaders"] }
image = { version = "0.25.5", features = ["jpeg", "png"] }
env_logger = "0.11.6"
integer-sqrt = "0.1.5"
rand = "0.9.0"
clipboard-rs = "0.2.4"